force-app/main/default/objects/Linked_Account_Attributes__c/Linked_Account_Attributes__c.object-meta.xml
<CustomObject>
    <description>Attributes by which two accounts are linked. It could be by name, email, phone or financial instruments.</description>
    <label>Linked Account Attribute</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Linked Account Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>