force-app/main/default/objects/Linked_Account_Attributes__c/fields/Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value__c</fullName>
    <description>Value of that attribute that is matching between accounts. It could be the name or email address or phone number, etc., This values is required to identify the exact value that is matching since there is a possibility of account having multiple data points (like multiple emails) out of which one could match.</description>
    <inlineHelpText>Value of that attribute that is matching between accounts.</inlineHelpText>
    <label>Attribute Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>