force-app/main/default/objects/Linked_Account_Attributes__c/fields/Linked_Account__c.field-meta.xml
<CustomField>
    <fullName>Linked_Account__c</fullName>
    <description>Attributes by which two accounts are linked.</description>
    <inlineHelpText>Attributes by which two accounts are linked.</inlineHelpText>
    <label>Linked Account</label>
    <referenceTo>Linked_Account__c</referenceTo>
    <relationshipLabel>Linked Account Attributes</relationshipLabel>
    <relationshipName>Linked_Account_Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>