force-app/main/default/objects/Linked_Account_Attributes__c/fields/Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Response_JSON__c</fullName>
    <description>The JSON string that contains the linked attribute details are stored in this field. Ideally, we would like to explode the whole data into the object, but given that Salesforce is not the system of record, we don&apos;t need to complicate unless it is absolutely necessary.</description>
    <inlineHelpText>The JSON string that contains the linked attribute details.</inlineHelpText>
    <label>Response JSON</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>